Support for gated build triggering

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -51,6 +51,7 @@ CheckinHeadCommitTask.ShallowCheckinRollupFormat=Roll-up of changes between comm
 CheckinHeadCommitTask.ShallowCheckinCommentFormat=Commit {0} ({1})
 CheckinHeadCommitTask.ShallowCheckinCommentDisplayTruncatedFormat=Showing only the first {0} commits messages, messages for commits between commit {1} and commit {2} have been truncated...
 CheckinPendingChangesTask.CheckingIn=Checking in pending changes
+CheckinPendingChangesTask.GatedBuildQueuedFormat=Gated build has been queued for shelveset {0}. Please wait till build finishes and pull the latest code.
 CloneTask.ClonedFormat=Cloned changeset {0} as {1}
 CloneTask.ClonedMultipleFormat=Cloned {0} changesets. Cloned last changeset {1} as {2}
 CloneTask.CloningFormat=Cloning {0} into {1}
