Enhancing git tf checkin - Added the ability to specify the checkin comment when checking in   shallow using -m / --message - Added the ability to preview what is going to be checked in TFS using -p   / --preview

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -39,11 +39,15 @@ CheckinCommand.Argument.Shallow.HelpText=Checks in a single changeset representi
 CheckinCommand.Argument.Squash.ValueDescription=commit id
 CheckinCommand.Argument.Squash.HelpText=commit ID to squash when performing deep checkins
 CheckinCommand.Argument.SquashAutoSquash.HelpText=Specifies how checkin should operate in the deep mode if one commit has more than one parent
+CheckinCommand.Argument.Preview.HelpText=Displays a preview of the commits that will be checked in TFS
+CheckinCommand.Argument.Message.ValueDescription=msg
+CheckinCommand.Argument.Message.HelpText=Use the given <msg> as the changeset comment
 CheckinCommand.GatedCheckinAborted=check-in aborted, pass --bypass to bypass gated check-in
 CheckinCommand.CommitIdDoesNotExistFormat=
 CheckinCommand.CommitIdAmbiguousFormat=commit id {0} is ambiguous
 CheckinCommand.HelpDescription=Creates a checkin of the changes in the current master branch head, provided it is parented off a commit converted from a TFS changeset.
 CheckinCommand.SquashOnlyAvailableWithDeep=the --squash argument is only available when using --deep
+CheckinCommand.MessageWillBeIgnoreBecauseDeepSpecified=the checkin comment will be ignored because --deep is specified
 PendingChangesCommand.WorkItemDoesNotExistFormat=work item {0} does not exist
 PendingChangesCommand.WorkItemInvalidFormat=work item {0} is not valid
 PendingChangesCommand.WorkItemSpecifiedMultipleTimesFormat=work item {0} specified more than once
@@ -56,7 +60,7 @@ CloneCommand.Argument.Directory.HelpText=The name of a new directory to clone in
 CloneCommand.Argument.Version.HelpText=The TFS version to clone
 CloneCommand.HelpDescription=Clones a path from Microsoft Team Foundation Server, creating a new git repository.
 CloneCommnad.InvalidPathFormat={0} is not a valid path
-CloneCommand.Argument.Shallow.HelpText=Creates a single commit for all changesets on the server. 
+CloneCommand.Argument.Shallow.HelpText=Creates a single commit for all changesets on the server.
 Command.Argument.Depth.ParseErrorFormat=invalid depth: ''{0}''
 Command.Argument.Help.HelpText=Displays usage information
 Command.Argument.ProjectCollection.HelpText=The TFS project collection URL
@@ -130,6 +134,7 @@ Main.CommandCreationFailedFormat=could not invoke ''{0}'' command: {1}
 Main.CommandNotFoundFormat=''{0}'' is not a {1} command.  See {1} --help.
 Main.HelpCommandsFormat=The {0} commands are:
 Main.UsageFormat=usage: {0} {1}
+Main.WarningFormat=warning: {0}
 PendingChangesCommand.Argument.Associate.HelpText=ID of the TFS work item to associate during check-in
 PendingChangesCommand.Argument.Associate.ValueDescription=workitem id
 PendingChangesCommand.Argument.Resolve.HelpText=ID of the TFS work item to resolve during check-in
