--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -29,7 +29,8 @@ Check.ArgumentNotEmptyFormat={0} must not be empty
 Check.ConditionMustNotBeFalse=condition must not be false
 CheckinHeadCommitTask.AllParentsSquashedFormat=cannot checkin - commit {0} has all parents squashed
 CheckinHeadCommitTask.CheckingIn=checking in
-CheckinHeadCommitTask.CheckingInToPathFormat=Checking in to {0}
+CheckinHeadCommitTask.CheckingInToPathFormat=Checking in {0}to {1}
+CheckinHeadCommitTask.Preview=(Preview) 
 CheckinHeadCommitTask.CheckedInFormat=Checked commit {0} in as changeset {1}
 CheckinHeadCommitTask.CheckedInMultipleFormat=Checked in {0} changesets, HEAD is changeset {1}
 CheckinHeadCommitTask.CommitFormat=commit {0}
@@ -41,7 +42,11 @@ CheckinHeadCommitTask.NonLinearHistoryFormat=cannot checkin - commit {0} has mul
 CheckinHeadCommitTask.CommitHasOneParentThatIsSquashedFormat=cannot checkin - commit {0} has one parent {1} that has been squashed
 CheckinHeadCommitTask.NotFastForwardFormat=the repository is not up to date. Please fetch and rebase/merge changeset {0}
 CheckinHeadCommitTask.CannotCheckinToANonEmptyFolderFormat=cannot perform the initial checkin against a non-empty folder. Destination {0} needs to be empty, please configure your repository against another tfs folder
-CheckinHeadCommitTask.CheckedInChangesetFormat=Checked in commit {0} as  changeset {1}
+CheckinHeadCommitTask.CheckedInChangesetFormat=Checked in commit {0} as changeset {1}
+CheckinHeadCommitTask.CheckedInPreviewSingleCommitFormat=Changeset {0}: changes in commit {1}
+CheckinHeadCommitTask.CheckedInPreviewDifferenceCommitsFormat=Changeset {0}: changes between commits {1} and {2}
+CheckinHeadCommitTask.CheckedInPreview=Checking in the differences between latest downloaded changeset and master HEAD...
+CheckinHeadCommitTask.CheckedInPreviewTableHeader=Change\t\tServer path
 CheckinPendingChangesTask.CheckingIn=Checking in pending changes
 CloneTask.ClonedFormat=Cloned changeset {0} as {1}
 CloneTask.ClonedMultipleFormat=Cloned {0} changesets. Cloned last changeset {1} as {2}
@@ -94,6 +99,10 @@ PendDifferencesTask.QueryingPendingChanges=collecting changes
 PendDifferenceTask.CouldNotCreateItemPathFormat=failed to create folder ''{0}'' on disk
 PendDifferenceTask.CouldNotCreateItemFormat=failed to extract item ''{0}'' from git 
 PendDifferenceTask.SimilarItemWithDifferentCaseInCommitFormat=item ''{0}'' exists in commit {1} more than once with different casing. TFS does not support having the same item with different cases in the same path.
+PreviewOnlyWorkspace.AddFormat=add\t\t{0}
+PreviewOnlyWorkspace.DeleteFormat=delete\t\t{0}
+PreviewOnlyWorkspace.EditFormat=edit\t\t{0}
+PreviewOnlyWorkspace.RenameFormat=rename, edit\t{0}
 PullTask.FetchingVersionFormat=Fetching and merging changes in {0} at {1}
 PullTask.Merge.AlreadyUpToDate=All files are up to date. There is nothing to pull.
 PullTask.Merge.MergeSuccessfulFormat=All files were fetched to commit {0} and merged into master successfully.
