Added tags for all commits downloaded from TFS or checked in TFS to help users identify commits synced to TFS

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -61,6 +61,9 @@ CloneCommand.Argument.Version.HelpText=The TFS version to clone
 CloneCommand.HelpDescription=Clones a path from Microsoft Team Foundation Server, creating a new git repository.
 CloneCommnad.InvalidPathFormat={0} is not a valid path
 CloneCommand.Argument.Shallow.HelpText=Creates a single commit for all changesets on the server.
+Command.Argument.TagChoice.HelpText=Determine whether to tag all commits that map to changesets downloaded from TFS (default: true) 
+Command.Argument.Tag.HelpText=Tag all commits that map to changesets
+Command.Argument.NoTag.HelpText=Do not tag all commits that map to changesets
 Command.Argument.Depth.ParseErrorFormat=invalid depth: ''{0}''
 Command.Argument.Help.HelpText=Displays usage information
 Command.Argument.ProjectCollection.HelpText=The TFS project collection URL
@@ -99,7 +102,7 @@ ConfigureCommand.Argument.List.HelpText=Displays the current configuration optio
 ConfigureCommand.Argument.Force.HelpText=Forces updating the server URI and server path (dangerous)
 ConfigureCommand.GitRepoNotConfigured=the git repository is not yet configured to work with TFS
 ConfigureCommand.InvalidCollectionFormat=project collection ''{0}'' is not a valid URL
-ConfigureCommand.InvalidOptionsSpecified=nothing to configure. please specify either --shallow or --deep option
+ConfigureCommand.InvalidOptionsSpecified=nothing to configure. please specify an option to configure
 ConsoleOutputTaskHandler.ExceptionFormat={0}
 ConsoleOutputTaskHandler.ExtendedErrorFormat={0}: {1}
 ConsoleOutputTaskHandler.UnknownError=unknown error
