--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -64,6 +64,7 @@ CreateCommitTask.CreatingCommitFormat=Downloading changeset {0}
 CreateCommitTask.CreatingTrees=Creating trees
 CreateCommitTask.CreatingCommit=Creating commit
 CreateCommitTask.ErrorCreatingTempDirectoryMessageFormat=could not create directory {0}
+CreateCommitTask.TagNameFormat=TFS_#{0}
 CreateWorkspaceTask.CreatingWorkspace=Creating TFS workspace
 CreateWorkspaceTask.WorkspaceComment=Automatically created temporary workspace for git-tf.
 CreateWorkspaceTask.CouldNotCreateTempDirFormat=could not create temporary directory {0}
@@ -82,6 +83,7 @@ FetchTask.NothingToFetchInNewlyConfiguredRepo=this is a newly configured reposit
 GitTFConfiguration.ToString.ServerURIFormat=Server URI : {0}  
 GitTFConfiguration.ToString.TfsPathFormat=TFS Server Path : {0}
 GitTFConfiguration.ToString.DepthFormat=Default Depth : {0}
+GitTFConfiguration.ToString.TagFormat=Tag Changeset Commits : {0}
 GitTFConfiguration.Shallow=Shallow
 GitTFConfiguration.Deep=Deep
 LockTask.LockFailedFormat=Could not lock {0}
