Updated the tag name for changesets downloaded to TFS_C[Number]

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -64,7 +64,7 @@ CreateCommitTask.CreatingCommitFormat=Downloading changeset {0}
 CreateCommitTask.CreatingTrees=Creating trees
 CreateCommitTask.CreatingCommit=Creating commit
 CreateCommitTask.ErrorCreatingTempDirectoryMessageFormat=could not create directory {0}
-CreateCommitTask.TagNameFormat=TFS_#{0}
+CreateCommitTask.TagNameFormat=TFS_C{0}
 CreateWorkspaceTask.CreatingWorkspace=Creating TFS workspace
 CreateWorkspaceTask.WorkspaceComment=Automatically created temporary workspace for git-tf.
 CreateWorkspaceTask.CouldNotCreateTempDirFormat=could not create temporary directory {0}
