Adding a couple of features to enhance access to what was downloaded to tfs. - Git tf now creates a remote tracking ref to what is in tfs in a remote   branch called "origin/tfs" - If the repo is a bare repo Git tf also creates a regular branch called   "tfs" to unblock the bare repo scenario.1`

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -61,6 +61,8 @@ CloneCommand.Argument.Version.HelpText=The TFS version to clone
 CloneCommand.HelpDescription=Clones a path from Microsoft Team Foundation Server, creating a new git repository.
 CloneCommnad.InvalidPathFormat={0} is not a valid path
 CloneCommand.Argument.Shallow.HelpText=Creates a single commit for all changesets on the server.
+CloneCommand.Argument.GitDir.ValueDescription=dir
+CloneCommand.Argument.GitDir.HelpText=The repository directory to be configured. This value is required for bare repositories (default: .git)
 Command.Argument.TagChoice.HelpText=Determine whether to tag all commits that map to changesets downloaded from TFS (default: true) 
 Command.Argument.Tag.HelpText=Tag all commits that map to changesets
 Command.Argument.NoTag.HelpText=Do not tag all commits that map to changesets
