--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -47,6 +47,9 @@ CheckinHeadCommitTask.CheckedInPreviewSingleCommitFormat=Changeset {0}: changes 
 CheckinHeadCommitTask.CheckedInPreviewDifferenceCommitsFormat=Changeset {0}: changes between commits {1} and {2}
 CheckinHeadCommitTask.CheckedInPreview=Checking in the differences between latest downloaded changeset and master HEAD...
 CheckinHeadCommitTask.CheckedInPreviewTableHeader=Change\t\tServer path
+CheckinHeadCommitTask.ShallowCheckinRollupFormat=Roll-up of changes between commit {0} and commit {1}.
+CheckinHeadCommitTask.ShallowCheckinCommentFormat=Commit {0} ({1})
+CheckinHeadCommitTask.ShallowCheckinCommentDisplayTruncatedFormat=Showing only the first {0} commits messages, messages for commits between commit {1} and commit {2} have been truncated...
 CheckinPendingChangesTask.CheckingIn=Checking in pending changes
 CloneTask.ClonedFormat=Cloned changeset {0} as {1}
 CloneTask.ClonedMultipleFormat=Cloned {0} changesets. Cloned last changeset {1} as {2}
