- Added the ability to select a gated build definition to use if there are multiple ones available. - Added the ability to configure your repo to use that build definition by   default every time.

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -29,31 +29,34 @@ ArgumentParser.FreeArgumentRequiresValueFormat=argument ''{0}'' requires a value
 ArgumentParser.MultipleChoicesSpecifiedFormat=only one of ''{0}'' or ''{1}'' may be specified
 ArgumentParser.RequiredArgumentMissingFormat={0} is a required argument
 ArgumentParser.UnknownArgumentFormat=unknown argument ''{0}''
-CheckinCommand.AlreadyUpToDate=All file are up to date there is nothing to checkin.
-CheckinCommand.Argument.AutoSquash.HelpText=automatically selects the commit paths in the git repository tree to checkin
+CheckinCommand.AlreadyUpToDate=All file are up to date there is nothing to check in.
+CheckinCommand.Argument.AutoSquash.HelpText=automatically selects the commit paths in the git repository tree to check in
+CheckinCommand.Argument.GatedBuild.HelpText=Bypass gated check-in or specify a gated build <definition> to use
+CheckinCommand.Argument.Gated.ValueDescription=definition
+CheckinCommand.Argument.Gated.HelpText=the gated build definition to use when checking in
 CheckinCommand.Argument.Bypass.HelpText=Bypass gated check-in (requires permission)
-CheckinCommand.Argument.DepthChoice.HelpText=Creates a "deep" checkin, checking in a TFS changeset for each git commit since the latest TFS changeset (requires linear history or ''--squash'' or ''--autosquash''), or "shallow", checking in a single changeset for all commits. If omitted, the depth value provided during clone or configure is used.
+CheckinCommand.Argument.DepthChoice.HelpText=Creates a "deep" check-in, checking in a TFS changeset for each git commit since the latest TFS changeset (requires linear history or ''--squash'' or ''--autosquash''), or "shallow", checking in a single changeset for all commits. If omitted, the depth value provided during clone or configure is used.
 CheckinCommand.Argument.Deep.HelpText=checks in all commits
 CheckinCommand.Argument.NoLock.HelpText=Does not take a lock on the server path before committing (dangerous)
 CheckinCommand.Argument.Shallow.HelpText=Checks in a single changeset representing the differences between the HEAD git commit and the latest TFS changeset
 CheckinCommand.Argument.Squash.ValueDescription=commit id
-CheckinCommand.Argument.Squash.HelpText=commit ID to squash when performing deep checkins
-CheckinCommand.Argument.SquashAutoSquash.HelpText=Specifies how checkin should operate in the deep mode if one commit has more than one parent
+CheckinCommand.Argument.Squash.HelpText=commit ID to squash when performing deep check-ins
+CheckinCommand.Argument.SquashAutoSquash.HelpText=Specifies how check in should operate in the deep mode if one commit has more than one parent
 CheckinCommand.Argument.Preview.HelpText=Displays a preview of the commits that will be checked in TFS
 CheckinCommand.Argument.Message.ValueDescription=msg
 CheckinCommand.Argument.Message.HelpText=Use the given <msg> as the changeset comment
 CheckinCommand.GatedCheckinAborted=check-in aborted, pass --bypass to bypass gated check-in
 CheckinCommand.CommitIdDoesNotExistFormat=
 CheckinCommand.CommitIdAmbiguousFormat=commit id {0} is ambiguous
-CheckinCommand.HelpDescription=Creates a checkin of the changes in the current master branch head, provided it is parented off a commit converted from a TFS changeset.
+CheckinCommand.HelpDescription=Creates a check-in of the changes in the current master branch head, provided it is parented off a commit converted from a TFS changeset.
 CheckinCommand.SquashOnlyAvailableWithDeep=the --squash argument is only available when using --deep
-CheckinCommand.MessageWillBeIgnoreBecauseDeepSpecified=the checkin comment will be ignored because --deep is specified
+CheckinCommand.MessageWillBeIgnoreBecauseDeepSpecified=the check-in comment will be ignored because --deep is specified
 PendingChangesCommand.WorkItemDoesNotExistFormat=work item {0} does not exist
 PendingChangesCommand.WorkItemInvalidFormat=work item {0} is not valid
 PendingChangesCommand.WorkItemSpecifiedMultipleTimesFormat=work item {0} specified more than once
 CloneCommand.Argument.Bare.HelpText=Creates a "bare" git repository. The directory created will be the git repository itself, instead of creating a working directory with a .git directory underneath (Beta)
 CloneCommand.Argument.Deep.HelpText=Performs a "deep" clone, creating commits for each TFS changeset
-CloneCommand.Argument.DepthChoice.HelpText=Creates a shallow clone of the specified depth, or a deep clone of all TFS changesets, and sets the default depth for fetch, pull, and checkin operations (default: 1)
+CloneCommand.Argument.DepthChoice.HelpText=Creates a shallow clone of the specified depth, or a deep clone of all TFS changesets, and sets the default depth for fetch, pull, and check in operations (default: 1)
 CloneCommand.Argument.Depth.HelpText=Specifies the number of changesets to create commits for (default: 1)
 CloneCommand.Argument.Depth.ValueDescription=num
 CloneCommand.Argument.Directory.HelpText=The name of a new directory to clone into.  If the directory is not specified, the name of the TFS folder will be used.  If this directory exists, it must be empty
@@ -81,7 +84,7 @@ Command.PasswordPrompt=Password:
 Command.PasswordEchoCouldNotBeDisabled=Warning: local echo could not be disabled, characters will be displayed
 Command.RepositoryNotFound=not a git repository (or any of the parent directories): .git
 Command.ServerConfigurationNotFound=TFS server configuration could not be loaded from repository
-Command.Argument.DepthChoice.HelpText=Sets the default depth value that will be used for fetch, pull, and checkin operations.
+Command.Argument.DepthChoice.HelpText=Sets the default depth value that will be used for fetch, pull, and check in operations.
 Command.Argument.Deep.HelpText=Creates a commit for every changeset on fetch and checks in every commit as a separate changeset.
 Command.Argument.Shallow.HelpText=Creates a single commit for all changes on fetch and checks in all commits as a single changeset. 
 Command.Argument.Depth.ParseErrorFormat=Invalid depth: ''{0}''. Depth need to be a positive integer.
@@ -105,6 +108,8 @@ ConfigureCommand.Argument.Force.HelpText=Forces updating the server URI and serv
 ConfigureCommand.GitRepoNotConfigured=the git repository is not yet configured to work with TFS
 ConfigureCommand.InvalidCollectionFormat=project collection ''{0}'' is not a valid URL
 ConfigureCommand.InvalidOptionsSpecified=nothing to configure. please specify an option to configure
+ConfigureCommand.Argument.Gated.ValueDescription=definition
+ConfigureCommand.Argument.Gated.HelpText=The gated build definition to use when checking in (default: None)
 ConsoleOutputTaskHandler.ExceptionFormat={0}
 ConsoleOutputTaskHandler.ExtendedErrorFormat={0}: {1}
 ConsoleOutputTaskHandler.UnknownError=unknown error
