--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -27,7 +27,7 @@
 Check.Argument=argument
 Check.ArgumentNotEmptyFormat={0} must not be empty
 Check.ConditionMustNotBeFalse=condition must not be false
-CheckinHeadCommitTask.AllParentsSquashedFormat=cannot checkin - commit {0} has all parents squashed
+CheckinHeadCommitTask.AllParentsSquashedFormat=cannot check in - commit {0} has all parents squashed
 CheckinHeadCommitTask.CheckingIn=checking in
 CheckinHeadCommitTask.CheckingInToPathFormat=Checking in {0}to {1}
 CheckinHeadCommitTask.Preview=(Preview) 
@@ -38,10 +38,10 @@ CheckinHeadCommitTask.DeletingWorkspace=Cleaning up temporary items
 CheckinHeadCommitTask.ExaminingRepository=examining repository
 CheckinHeadCommitTask.LatestNotInTreeFormat=the latest changes (commit {0}) have been fetched but have not been merged/rebased into master yet. Please merge/rebase the latest changes into master
 CheckinHeadCommitTask.ServerPathDoesNotExistFormat=server path {0} does not exist (has it been deleted?)
-CheckinHeadCommitTask.NonLinearHistoryFormat=cannot checkin - commit {0} has multiple parents, please rebase to form a linear history or use --shallow
-CheckinHeadCommitTask.CommitHasOneParentThatIsSquashedFormat=cannot checkin - commit {0} has one parent {1} that has been squashed
+CheckinHeadCommitTask.NonLinearHistoryFormat=cannot check in - commit {0} has multiple parents, please rebase to form a linear history or use --shallow
+CheckinHeadCommitTask.CommitHasOneParentThatIsSquashedFormat=cannot check in - commit {0} has one parent {1} that has been squashed
 CheckinHeadCommitTask.NotFastForwardFormat=the repository is not up to date. Please fetch and rebase/merge changeset {0}
-CheckinHeadCommitTask.CannotCheckinToANonEmptyFolderFormat=cannot perform the initial checkin against a non-empty folder. Destination {0} needs to be empty, please configure your repository against another tfs folder
+CheckinHeadCommitTask.CannotCheckinToANonEmptyFolderFormat=cannot perform the initial check in against a non-empty folder. Destination {0} needs to be empty, please configure your repository against another tfs folder
 CheckinHeadCommitTask.CheckedInChangesetFormat=Checked in commit {0} as changeset {1}
 CheckinHeadCommitTask.CheckedInPreviewSingleCommitFormat=Changeset {0}: changes in commit {1}
 CheckinHeadCommitTask.CheckedInPreviewDifferenceCommitsFormat=Changeset {0}: changes between commits {1} and {2}
@@ -86,6 +86,7 @@ FetchTask.RefLogFormat=TFS changeset {0}
 FetchTask.NothingToFetchInNewlyConfiguredRepo=this is a newly configured repository. There is nothing to fetch from tfs.
 GitTFConfiguration.ToString.ServerURIFormat=Server URI : {0}  
 GitTFConfiguration.ToString.TfsPathFormat=TFS Server Path : {0}
+GitTFConfiguration.ToString.GatedBuildFormat=Gated Build Definition : {0}
 GitTFConfiguration.ToString.DepthFormat=Default Depth : {0}
 GitTFConfiguration.ToString.TagFormat=Tag Changeset Commits : {0}
 GitTFConfiguration.Shallow=Shallow
@@ -145,5 +146,5 @@ VersionSpecUtil.DateFormat=date {0}
 VersionSpecUtil.LabelFormat=label {0}
 VersionSpecUtil.Latest=latest changeset
 VersionSpecUtil.WorkspaceFormat=versions in workspace {0}
-WorkspaceOperationErrorListener.ErrorMessage=failed to pend changes to TFS due to the following errors. Please fix the errors and retry checkin.
+WorkspaceOperationErrorListener.ErrorMessage=failed to pend changes to TFS due to the following errors. Please fix the errors and retry check in.
 UpgradeManager.upgradeFromV0ToV1.CannotCleanUpTempDirectoryFormat=cannot delete the temporary directory in {0}. Please delete it manually and try again 
