Added Git Meta Data to TFS Changeset comments

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -49,6 +49,8 @@ CheckinHeadCommitTask.CheckedInPreview=Checking in the differences between lates
 CheckinHeadCommitTask.CheckedInPreviewTableHeader=Change\t\tServer path
 CheckinHeadCommitTask.ShallowCheckinRollupFormat=Roll-up of changes between commit {0} and commit {1}.
 CheckinHeadCommitTask.ShallowCheckinCommentFormat=Commit {0} ({1})
+CheckinHeadCommitTask.ShallowCheckinCommentAuthorFormat= Author: {0} <{1}>
+CheckinHeadCommitTask.ShallowCheckinCommentCommitterFormat= Committer: {0} <{1}>
 CheckinHeadCommitTask.ShallowCheckinCommentDisplayTruncatedFormat=Showing only the first {0} commits messages, messages for commits between commit {1} and commit {2} have been truncated...
 CheckinPendingChangesTask.CheckingIn=Checking in pending changes
 CheckinPendingChangesTask.GatedBuildQueuedFormat=Gated build has been queued for shelveset {0}. Please wait till build finishes and pull the latest code.
