--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -38,6 +38,7 @@ CheckinCommand.Argument.Bypass.HelpText=Bypass gated check-in (requires permissi
 CheckinCommand.Argument.DepthChoice.HelpText=Creates a "deep" check-in, checking in a TFS changeset for each git commit since the latest TFS changeset (requires linear history or ''--squash'' or ''--autosquash''), or "shallow", checking in a single changeset for all commits. If omitted, the depth value provided during clone or configure is used.
 CheckinCommand.Argument.Deep.HelpText=checks in all commits
 CheckinCommand.Argument.NoLock.HelpText=Does not take a lock on the server path before committing (dangerous)
+CheckinCommand.Argument.NoMetaData.HelpText=Does not include the git commit meta data in the changeset comment when checking in deep 
 CheckinCommand.Argument.Shallow.HelpText=Checks in a single changeset representing the differences between the HEAD git commit and the latest TFS changeset
 CheckinCommand.Argument.Squash.ValueDescription=commit id
 CheckinCommand.Argument.Squash.HelpText=commit ID to squash when performing deep check-ins
@@ -51,6 +52,7 @@ CheckinCommand.CommitIdAmbiguousFormat=commit id {0} is ambiguous
 CheckinCommand.HelpDescription=Creates a check-in of the changes in the current master branch head, provided it is parented off a commit converted from a TFS changeset.
 CheckinCommand.SquashOnlyAvailableWithDeep=the --squash argument is only available when using --deep
 CheckinCommand.MessageWillBeIgnoreBecauseDeepSpecified=the check-in comment will be ignored because --deep is specified
+CheckinCommand.NoMetaDataWillBeIgnoreBecauseShallowSpecified=the --no-metadata option will be ignored because --shallow is specified
 PendingChangesCommand.WorkItemDoesNotExistFormat=work item {0} does not exist
 PendingChangesCommand.WorkItemInvalidFormat=work item {0} is not valid
 PendingChangesCommand.WorkItemSpecifiedMultipleTimesFormat=work item {0} specified more than once
