Implementing the force option for fetch and pull to allow the user to force downloading the latest downloaded changeset again in case permissions changed and the content of the changeset has been updated from the user's prospective

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -125,6 +125,7 @@ FetchCommand.Argument.Version.HelpText=The TFS version to fetch (default: latest
 FetchCommand.Argument.Deep.HelpText=Performs a "deep" fetch, creating commits for each TFS changeset since the last fetch
 FetchCommand.Argument.DepthChoice.HelpText=Performs a shallow fetch of the specified depth, or a deep fetch of all TFS changesets since the last fetch. If omitted, the depth value provided during clone or configure is used.
 FetchCommand.Argument.Shallow.HelpText=Creates a single commit for all changes on fetch
+FetchCommand.Argument.Force.HelpText=Performs a force fetch and downloads the last downloaded changeset again. 
 GitTFHTTPClientFactory.IllegalProxyURLFormat=Illegal proxy URL: ''{0}''
 GitTFHTTPClientFactory.ProxyURLDoesNotContainValidHostnameFormat=Proxy URL ''{0}'' does not contain a valid hostname.
 HelpCommand.Argument.Command.HelpText=The command to display help for
@@ -163,6 +164,7 @@ PullCommand.Argument.Theirs.HelpText=Uses the theirs strategy when merging
 PullCommand.Argument.Resolve.HelpText=Uses the resolve strategy when merging
 PullCommand.Argument.Rebase.HelpText=Rebase master on top of the upstream changes after fetching
 PullCommand.RebaseNotSupportedWithOursAndTheirs=rebase does not currently support the --ours or --theirs options
+PullCommand.Argument.Force.HelpText=Performs a force pull and downloads the last downloaded changeset again.
 ShelveCommand.Argument.Name.HelpText=name of the shelveset to create
 ShelveCommand.Argument.Replace.HelpText=Replaces an existing shelveset of the same name
 ShelveCommand.HelpDescription=Creates a shelveset of the changes in the current HEAD as it differs from the last TFS changeset fetched (Beta)
