Support file renames in git-tf

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -112,7 +112,8 @@ PendDifferenceTask.SimilarItemWithDifferentCaseInCommitFormat=item ''{0}'' exist
 PreviewOnlyWorkspace.AddFormat=add\t\t{0}
 PreviewOnlyWorkspace.DeleteFormat=delete\t\t{0}
 PreviewOnlyWorkspace.EditFormat=edit\t\t{0}
-PreviewOnlyWorkspace.RenameFormat=rename, edit\t{0}
+PreviewOnlyWorkspace.RenameEditFormat=rename, edit\t{0}
+PreviewOnlyWorkspace.RenameFormat=rename\t\t{0}
 PullTask.FetchingVersionFormat=Fetching and merging changes in {0} at {1}
 PullTask.Merge.AlreadyUpToDate=All files are up to date. There is nothing to pull.
 PullTask.Merge.MergeSuccessfulFormat=All files were fetched to commit {0} and merged into master successfully.
@@ -135,6 +136,7 @@ RepositoryUtil.NoCommitForHead=no commit for HEAD ref (is symbolic?)
 RepositoryUtil.NoHeadRef=no HEAD ref
 RepositoryUtil.NotGitRepoExceptionFormat={0} is not a git repository
 RepositoryUtil.IsNotADirectoryFormat=destination ''{0}'' is not a directory
+RepositoryUtil.AmbiguousObjectFormat=could not resolve this object {0}
 ShelveDifferenceTask.ExaminingRepository=examining repository
 ShelveDifferenceTask.ShelvingDifferencesFormat=Shelving differences to {0}
 ShelveDifferenceTask.Shelving=shelving
