Disabling locking the workspace when checking in shallow and notifying the user in case a discrepancy was detected after checkin

--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -33,6 +33,7 @@ CheckinHeadCommitTask.CheckingInToPathFormat=Checking in {0}to {1}
 CheckinHeadCommitTask.Preview=(Preview) 
 CheckinHeadCommitTask.CheckedInFormat=Checked commit {0} in as changeset {1}
 CheckinHeadCommitTask.CheckedInMultipleFormat=Checked in {0} changesets, HEAD is changeset {1}
+CheckinHeadCommitTask.OtherUserCheckinDetected=Another user checked in changes while your check-in was being processed. Please execute fetch/pull --force to ensure that your repository is up to date. 
 CheckinHeadCommitTask.CommitFormat=commit {0}
 CheckinHeadCommitTask.DeletingWorkspace=Cleaning up temporary items
 CheckinHeadCommitTask.ExaminingRepository=examining repository
