--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -56,7 +56,7 @@ CheckinHeadCommitTask.ShallowCheckinCommentDisplayTruncatedFormat=Showing only t
 CheckinPendingChangesTask.CheckingIn=Checking in pending changes
 CheckinPendingChangesTask.GatedBuildQueuedFormat=Gated build has been queued for shelveset {0}. Please wait till build finishes and pull the latest code.
 CheckinPendingChangesTask.InvalidGatedDefinitionSpecifiedFormat=''{0}'' does not match any of the gated build definitions available 
-CheckinPendingChangesTask.OtherUserCheckinDetected=Another user checked in conflicting changes while your check-in was being processed. Please resolve the conflicts and try again.  
+CheckinPendingChangesTask.OtherUserCheckinDetected=Another user checked in conflicting changes while your check-in was being processed. Please download the changesets, resolve the conflicts and try again.
 CloneTask.ClonedFormat=Cloned changeset {0} as {1}
 CloneTask.ClonedMultipleFormat=Cloned {0} changesets. Cloned last changeset {1} as {2}
 CloneTask.CloningFormat=Cloning {0} into {1}
