Multiple bug fixes

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -29,7 +29,7 @@ ArgumentParser.FreeArgumentRequiresValueFormat=argument ''{0}'' requires a value
 ArgumentParser.MultipleChoicesSpecifiedFormat=only one of ''{0}'' or ''{1}'' may be specified
 ArgumentParser.RequiredArgumentMissingFormat={0} is a required argument
 ArgumentParser.UnknownArgumentFormat=unknown argument ''{0}''
-CheckinCommand.AlreadyUpToDate=All file are up to date there is nothing to check in.
+CheckinCommand.AlreadyUpToDate=All files are up to date there is nothing to check in.
 CheckinCommand.Argument.AutoSquash.HelpText=automatically selects the commit paths in the git repository tree to check in
 CheckinCommand.Argument.GatedBuild.HelpText=Bypass gated check-in or specify a gated build <definition> to use
 CheckinCommand.Argument.Gated.ValueDescription=definition
