Added the shelvesets command to enable querying, viewing and deleting shelvesets that are on the server

--- a/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
+++ b/com.microsoft.gittf.client.clc/src/main/resources/com/microsoft/gittf/client/clc/messages.properties
@@ -35,7 +35,7 @@ CheckinCommand.Argument.GatedBuild.HelpText=Bypass gated check-in or specify a g
 CheckinCommand.Argument.Gated.ValueDescription=definition
 CheckinCommand.Argument.Gated.HelpText=the gated build definition to use when checking in
 CheckinCommand.Argument.Bypass.HelpText=Bypass gated check-in (requires permission)
-CheckinCommand.Argument.DepthChoice.HelpText=Creates a "deep" check-in, checking in a TFS changeset for each git commit since the latest TFS changeset (requires linear history or ''--squash'' or ''--autosquash''), or "shallow", checking in a single changeset for all commits. If omitted, the depth value provided during clone or configure is used.
+CheckinCommand.Argument.DepthChoice.HelpText=Creates a "deep" check-in, checking in a TFS changeset for each git commit since the latest TFS changeset (requires linear history or "--squash" or "--autosquash"), or "shallow", checking in a single changeset for all commits. If omitted, the depth value provided during clone or configure is used.
 CheckinCommand.Argument.Deep.HelpText=checks in all commits
 CheckinCommand.Argument.NoLock.HelpText=Does not take a lock on the server path before committing (dangerous)
 CheckinCommand.Argument.NoMetaData.HelpText=Does not include the git commit meta data in the changeset comment when checking in deep 
@@ -143,6 +143,7 @@ Main.Command.Configure.HelpText=Configures an existing git repository to add to 
 Main.Command.Fetch.HelpText=Fetch the latest code from TFS into FETCH_HEAD
 Main.Command.Pull.HelpText=Pulls the latest code from TFS and merge/rebase the changes into master
 Main.Command.Shelve.HelpText=Shelves the changes to a TFS folder (Beta)
+Main.Command.Shelvesets.HelpText=Lists the shelvesets available on the server. Provides a way to delete shelvesets
 Main.CommandCreationFailedFormat=could not invoke ''{0}'' command: {1}
 Main.CommandNotFoundFormat=''{0}'' is not a {1} command.  See {1} --help.
 Main.HelpCommandsFormat=The {0} commands are:
@@ -152,9 +153,9 @@ PendingChangesCommand.Argument.Associate.HelpText=ID of the TFS work item to ass
 PendingChangesCommand.Argument.Associate.ValueDescription=workitem id
 PendingChangesCommand.Argument.Resolve.HelpText=ID of the TFS work item to resolve during check-in
 PendingChangesCommand.Argument.Resolve.ValueDescription=workitem id
-PendingChangesCommand.Argument.RenameMode.HelpText=The rename mode to use when pending changes. Specify either ''all'', ''justFiles'' or ''none'' (default: all)
+PendingChangesCommand.Argument.RenameMode.HelpText=The rename mode to use when pending changes. Specify either "all", "justFiles" or "none" (default: all)
 PendingChangesCommand.Argument.RenameMode.ValueDescription=all|justFiles|none
-PendingChangesCommand.InvalidRenameModeFormat=''{0}'' is not a valid rename mode. Please specify either ''all'', ''justFiles'' or ''none''.
+PendingChangesCommand.InvalidRenameModeFormat=''{0}'' is not a valid rename mode. Please specify either "all", "justFiles" or "none".
 ProductInformation.UnableToLoadVersionPropertiesResourceFormat=Unable to load version properties resource ''{0}''
 PullCommand.HelpDescription=Pulls the latest code from TFS and merge/rebase the changes into master.
 PullCommand.Argument.Version.HelpText=The TFS version to pull (default: latest)
@@ -172,3 +173,27 @@ ShelveCommand.Argument.Name.HelpText=name of the shelveset to create
 ShelveCommand.Argument.Replace.HelpText=Replaces an existing shelveset of the same name
 ShelveCommand.HelpDescription=Creates a shelveset of the changes in the current HEAD as it differs from the last TFS changeset fetched (Beta)
 ShelveCommand.NoChanges=HEAD is currently at a TFS changeset, nothing to shelve
+ShelvesetsCommand.Argument.User.ValueDescription=owner
+ShelvesetsCommand.Argument.User.HelpText=The shelvset owner name. User '*' to query for all users.
+ShelvesetsCommand.Argument.Sort.ValueDescription=name|owner|date
+ShelvesetsCommand.Argument.Sort.HelpText= The value to use when sorting the list. Please specify either "name", "owner" or "date" (default: name)
+ShelvesetsCommand.Argument.Details.HelpText=Display shelveset details such as owner, date, comment and included changes (requires a shelveset name)
+ShelvesetsCommand.Argument.Delete.HelpText=Deletes the shelveset specified (requires a shelveset name)
+ShelvesetsCommand.Argument.Name.HelpText=Shelveset name
+ShelvesetsCommand.HelpDescription=Displays the list of shelvesets available on the TFS server. Provides a way to delete shelvesets from the server too.
+ShelvesetsCommand.SortWillBeIgnoredDeleteSpecified=the sort option will be ignored because --delete is specified
+ShelvesetsCommand.DetailsWillBeIgnoredDeleteSpecified=the details option will be ignored because --delete is specified
+ShelvesetsCommand.DeleteNotSupportedWithoutName=shelveset name is required if --delete is specified. Please specify a shelveset name and try again.
+ShelvesetsCommand.InvalidShelvetSortModeFormat=''{0}'' is not a valid sort option. Please specify either  "name", "owner" or "date".
+ShelvesetConsoleView.HeaderFormat={0} shelvesets found.
+ShelvesetConsoleView.TableHeader=Shelveset Full Name
+ShelvesetConsoleView.TableSeparator=-------------------------------------------------------------------------------
+ShelvesetConsoleView.ShelvesetFormat={0};{1}
+ShelvesetConsoleView.ShelvesetNameFormat=Name: {0}
+ShelvesetConsoleView.ShelvesetOwnerFormat=Owner: {0} ({1})
+ShelvesetConsoleView.ShelvesetCommentFormat=Comment: {0}
+ShelvesetConsoleView.ShelvesetResolvedWorkItemsFormat=Resolved Workitems: {0}
+ShelvesetConsoleView.ShelvesetAssociatedWorkItemsFormat=Associated Workitems: {0}
+ShelvesetConsoleView.ChangesTableHeader= Change\t\tPath
+ShelvesetConsoleView.PendingChangeFormat={0}\t\t{1}
+ShelvesetConsoleView.ShelvesetWorkItemNone=none
