--- a/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
+++ b/com.microsoft.gittf.core/src/main/resources/com/microsoft/gittf/core/messages.properties
@@ -139,10 +139,16 @@ RepositoryUtil.NoHeadRef=no HEAD ref
 RepositoryUtil.NotGitRepoExceptionFormat={0} is not a git repository
 RepositoryUtil.IsNotADirectoryFormat=destination ''{0}'' is not a directory
 RepositoryUtil.AmbiguousObjectFormat=could not resolve this object {0}
+ShelvesetDeleteTask.DeletingShelveset=Deleting shelveset
+ShelvesetDeleteTask.NoShelvesetsFound=there were no shelvesets found on the server that match the parameters specified.
+ShelvesetDeleteTask.MultipleShelvesetsFound=there were multiple shelvesets found matching the specified parameters. Please specify a single shelveset to delete.
+ShelvesetDeleteTask.ShlvesetDeletedSuccessfullyFormat=Shelveset {0} deleted successfully.
 ShelveDifferenceTask.ExaminingRepository=examining repository
 ShelveDifferenceTask.ShelvingDifferencesFormat=Shelving differences to {0}
 ShelveDifferenceTask.Shelving=shelving
 ShelvePendingChangesTask.ShelvingChangesFormat=Shelving {0} changes
+ShelvesetsDisplayTask.DownloadingShelvesets=Retrieving shelvesets
+ShelvesetsDisplayTask.NoShelvesetsFound=there were no shelvesets found on the server that match the parameters specified.
 SubTaskProgressMonitor.DetailFormat={0}: {1}
 UnlockTask.UnlockingFormat=Unlocking {0}
 UpdateLocalVersionTask.UpdatingLocalVersions=Updating local versions
